# openeo-python-client

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  Jenkinsfile  MANIFEST.in  README.md  api-artifacts.html  api-processbuilder.html  api-processes.html  api.html  auth.html  basics.html  batch_jobs.html  best_practices.html  changelog.html  configuration.html  data_access.html  datacube_construction.html  development.html  federation-extension.html  genindex.html  index.html  installation.html  machine_learning.html  objects.inv  process_mapping.html  processes.html  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-localprocessing.txt  requirements.txt  rst-cheatsheet.html  scl_native.tif  scl_resampled.tif  (+6 more)
.doctrees/: api-artifacts.doctree  api-processbuilder.doctree  api-processes.doctree  api.doctree  auth.doctree  basics.doctree  batch_jobs.doctree  best_practices.doctree  changelog.doctree  configuration.doctree  data_access.doctree  datacube_construction.doctree  development.doctree  environment.pickle  federation-extension.doctree  index.doctree  installation.doctree  machine_learning.doctree  process_mapping.doctree  processes.doctree  rst-cheatsheet.doctree  udf.doctree  udp.doctree
.doctrees/__intersphinx_cache__/: urllib3_objects.inv  xarray_objects.inv
.doctrees/cookbook/: ard.doctree  index.doctree  job_manager.doctree  localprocessing.doctree  sampling.doctree  spectral_indices.doctree  tricks.doctree  udp_sharing.doctree
.github/workflows/: build-wheel.yml  lint-and-test.yml  lint.yml  sphinx2ghpages.yml  unittests.yml
_modules/: index.html
_modules/openeo/: metadata.html  processes.html  testing.html  util.html
_sources/: api-processbuilder.rst.txt  api-processes.rst  api-processes.rst.txt  api.rst  api.rst.txt  auth.rst.txt  basics.rst.txt  batch_jobs.rst.txt  best_practices.rst.txt  configuration.rst  configuration.rst.txt  data_access.rst.txt  datacube_construction.rst.txt  development.rst  development.rst.txt  index.rst  index.rst.txt  installation.rst.txt  machine_learning.rst.txt  process_mapping.rst.txt  processes.rst.txt  rst-cheatsheet.rst.txt  udf.rst.txt  udp.rst.txt
_sources/cookbook/: ard.rst  index.rst  job_manager.rst  job_manager.rst.txt  localprocessing.rst.txt  sampling.md.txt  spectral_indices.rst.txt  tricks.rst.txt  udp_sharing.rst.txt
_static/: alabaster.css  copybutton.js  custom.css  documentation_options.js
cookbook/: ard.html  index.html  job_manager.html  localprocessing.html  sampling.html  spectral_indices.html  tricks.html  udp_sharing.html
docs/: Makefile  api-artifacts.rst  api.rst  ard.rst  auth.rst  basics.rst  batch_jobs.rst  best_practices.rst  conf.py  configuration.rst  cookbook.rst  data_access.rst  datacube_construction.rst  development.rst  federation-extension.rst  index.rst  installation.rst  like-a-pro.sh  machine_learning.rst  process_listing.py  process_listing.rst  process_mapping.py  process_mapping.rst  processes.rst  rst-cheatsheet.rst  udf.rst  udp.rst
docs/_ext/: jsonlexer.py
docs/_static/: custom.css
examples/: README.md  R_example.py  aggregate_spatial.py  ard_examples.py  bandmath_example.py  download_composite.py  eodc_example.py  eurac_example.py  eurac_example_procgen.py  gee_example.py  gee_example_processes.py  gee_uc1_pol.py  gee_uc1_temp.py  mundialis_example.py  mundialis_extended.py  mundialis_mini.py  ndvi_composite.py  phenology_example.py  process_wrapper.py  profiling_example.py  py3_process_wrapper-wcps_eurac.py  random_forest_example.py  requirements.txt  vito_example.py
openeo/: __init__.py  _version.py  api.py  capabilities.py  catalog.py  config.py  connection.py  dates.py  error_summary.py  file.py  graphbuilder.py  graphbuilder_100.py  imagecollection.py  job.py  metadata.py  processes.py  processgraph.py  result.py  service.py  sessions.py  udp.py  util.py  vectorcube.py
reporting/: README.md  conf.py  index.rst  newprocesses.rst
specs/: .gitignore  update-subrepos.py
tests/: __init__.py  aggregate_zonal.json  apply_dimension_temporal_cumsum.json  conftest.py  evi_graph.json  logical_and.json  logical_or.json  notequal.json  pre_test.sh  test_GraphVisitor.py  test_bandmath.py  test_batch_jobs.py  test_capabilities.py  test_config.py  test_dates.py  test_eodc.py  test_graphbuilder.py  test_imagecollection.py  test_imagery.py  test_job_results.py  test_logical_operators.py  test_metadata.py  test_monthly_aggregation.py  test_processes.py  test_rastercube.py  test_rest_session.py  test_spectral_indices.py  test_temporal_ops.py  test_usecase1.py  test_util.py  test_zonal_stats.py  udf_graph.json
(+555 files in other folders)
